--- a/android/res/layout/desktop_item.xml
+++ b/android/res/layout/desktop_item.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/desktop_item_container"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/margin_small"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content" >
 
-    <ImageView
-        android:id="@+id/desktop_item_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_desktop" />
-
-    <TextView
-        android:id="@+id/desktop_item_label"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_margin="@dimen/margin_medium"
+        android:orientation="vertical" >
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/desktop_item_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_desktop" />
+
+        <TextView
+            android:id="@+id/desktop_item_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/desktop_item_del"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/desktop_item_icon"
+        android:src="@drawable/ic_desktop_del"
+        android:visibility="gone" />
+
+</RelativeLayout>
