--- a/android/res/layout/toolbar_item.xml
+++ b/android/res/layout/toolbar_item.xml
@@ -3,14 +3,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/margin_small"
+    android:layout_weight="1"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/toolbar_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:src="@drawable/ic_toolbar" />
+        android:layout_gravity="center" />
 
     <TextView
         android:id="@+id/toolbar_item_label"
