--- a/android/res/layout/history_item.xml
+++ b/android/res/layout/history_item.xml
@@ -38,6 +38,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
+                android:singleLine="true"
                 android:tag="label"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -45,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:singleLine="true"
                 android:tag="time"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
