--- a/android/res/layout/template_edit.xml
+++ b/android/res/layout/template_edit.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_medium" >
+    android:orientation="vertical" >
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -17,7 +16,8 @@
             <TableLayout
                 android:id="@+id/matrix"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_medium" >
             </TableLayout>
         </HorizontalScrollView>
     </ScrollView>
@@ -25,7 +25,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:padding="@dimen/padding_medium" >
 
         <Button
             android:layout_width="match_parent"
