--- a/android/res/layout/launcher.xml
+++ b/android/res/layout/launcher.xml
@@ -1,6 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res/com.lincbio.lincxmap"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/desktop"
@@ -16,20 +14,21 @@
         android:orientation="horizontal"
         android:padding="@dimen/padding_small" />
 
-    <ScrollView
+    <ImageView
+        android:id="@+id/cursor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="matrix"
+        android:src="@drawable/cursor" />
+    
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_weight="1" >
-
-        <com.lincbio.lincxmap.android.view.FlowLayout
-            android:id="@+id/desktop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_large"
-            app:horizontalSpacing="@dimen/margin_medium"
-            app:verticalSpacing="@dimen/margin_medium" >
-        </com.lincbio.lincxmap.android.view.FlowLayout>
-    </ScrollView>
+        android:layout_weight="1"
+        android:flipInterval="30"
+        android:persistentDrawingCache="animation" >
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
