--- a/android/res/layout/history_item.xml
+++ b/android/res/layout/history_item.xml
@@ -10,11 +10,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="0"
-        android:src="@android:drawable/ic_menu_view" />
+        android:src="@android:drawable/ic_menu_recent_history" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
         android:paddingLeft="@dimen/padding_small"
@@ -22,7 +22,8 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:tag="owner"
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -31,6 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_weight="0"
             android:orientation="horizontal" >
 
             <TextView
