--- a/android/res/layout/result_item.xml
+++ b/android/res/layout/result_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-    android:padding="@dimen/padding_medium" >
+    android:paddingLeft="@dimen/padding_medium"
+    android:paddingRight="@dimen/padding_medium" >
 
     <ImageView
         android:layout_width="wrap_content"
