--- a/android/res/layout/result_item.xml
+++ b/android/res/layout/result_item.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/padding_medium"
-    android:paddingRight="@dimen/padding_medium" >
+    android:paddingBottom="@dimen/padding_medium"
+    android:paddingTop="@dimen/padding_medium" >
 
     <ImageView
         android:layout_width="wrap_content"
@@ -16,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:paddingLeft="@dimen/padding_medium"
+        android:paddingRight="@dimen/padding_medium" >
 
         <TextView
             android:layout_width="match_parent"
