--- a/android/res/layout/toolbar_item.xml
+++ b/android/res/layout/toolbar_item.xml
@@ -10,13 +10,16 @@
         android:id="@+id/toolbar_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:src="@drawable/ic_launcher" />
 
     <TextView
         android:id="@+id/toolbar_item_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:singleLine="true" />
+        android:singleLine="true"
+		android:textColor="@android:color/white"
+		android:text="item" />
 
 </LinearLayout>
