--- a/android/res/layout/launcher.xml
+++ b/android/res/layout/launcher.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="0"
-        android:background="@drawable/bg_toolbar"
+        android:background="#01202e"
         android:orientation="horizontal"
         android:padding="@dimen/padding_small" />
 
