--- a/android/res/menu/ctx_product.xml
+++ b/android/res/menu/ctx_product.xml
@@ -1,8 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_mod_product"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/menu_mod_product"/>
+    <item
         android:id="@+id/menu_del_product"
         android:icon="@android:drawable/ic_menu_delete"
-        android:title="@string/menu_del_product" />
+        android:title="@string/menu_del_product"/>
 
 </menu>
