--- a/android/res/values/arrays.xml
+++ b/android/res/values/arrays.xml
@@ -21,8 +21,11 @@
         <item>0</item>
         <item>1</item>
     </string-array>
-    <string-array name="product_models">
+    <string-array name="product_model_names">
         <item>Linear</item>
+    </string-array>
+    <string-array name="product_model_ids">
+        <item>linear</item>
     </string-array>
 
 </resources>
