--- a/android/res/values/arrays.xml
+++ b/android/res/values/arrays.xml
@@ -23,9 +23,11 @@
     </string-array>
     <string-array name="product_model_names">
         <item>Linear</item>
+        <item>Nexp</item>
     </string-array>
     <string-array name="product_model_ids">
         <item>linear</item>
+        <item>nexp</item>
     </string-array>
 
 </resources>
