--- a/android/res/values/arrays.xml
+++ b/android/res/values/arrays.xml
@@ -21,6 +21,14 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+    <string-array name="array_sample_selector_type_names">
+        <item>Circle</item>
+        <item>Rectangle</item>
+    </string-array>
+    <string-array name="array_sample_selector_type_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
     <string-array name="product_model_names">
         <item>Linear</item>
         <item>Nexp</item>
