--- a/android/res/drawable/wallpaper.xml
+++ b/android/res/drawable/wallpaper.xml
@@ -1,4 +1,4 @@
 <bitmap xmlns:android="http://schemas.android.com/apk/res/android"
 	android:src="@drawable/bg_home"
-	android:tileMode="repeat"
+	android:tileMode="clamp"
     android:gravity="center" />
