--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="AppTheme" parent="@android:style/Theme.DeviceDefault">
-        <item name="android:windowBackground">@drawable/desktop</item>
+        <item name="android:windowBackground">@drawable/wallpaper</item>
     </style>
 
     <style name="AppTheme.NoTitleBar.Fullscreen" parent="@android:style/Theme.NoTitleBar.Fullscreen">
